<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uclv_rh8d_ros2_driver</name>
  <version>0.0.0</version>
  <description>This package include ROS 2 driver for RH8D.</description>
  <maintainer email="roberto.chello@studenti.unicampania.it">robertochello</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>my_library</depend>
  <depend>custom_msg</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
